# moxin-tts

./: ARCHITECTURE.md  CHECKLIST.md  CLAUDE.md  Cargo.toml  FEW_SHOT_UI_IMPLEMENTATION_GUIDE.md  MACOS_CHECKLIST.md  MACOS_SETUP.md  QUICKSTART_MACOS.md  README.md  TROUBLESHOOTING_MACOS.md  VOICE_CLONE_MODAL_MODIFICATIONS_SUMMARY.md  diagnose_tts.py  install_macos_deps.sh  voice_clone_modal_new_methods.rs
apps/mofa-fm/src/screen/: mod.rs  (+2 more)
apps/mofa-tts/: Cargo.toml
apps/mofa-tts/dataflow/: tts.yml
apps/mofa-tts/src/: audio_player.rs  dora_integration.rs  lib.rs  screen.rs  screen_moyoyo.rs  task_persistence.rs  training_manager.rs  voice_clone_modal.rs  voice_data.rs  voice_persistence.rs  voice_selector.rs
doc/: CONTEXT_RESUME.md  DEBUG_LOG.md  MOYOYO_UI_IMPLEMENTATION.md  PATH_MAPPING.md  TTS_REFACTOR_PROGRESS.md  TTS_SCREEN_REFACTOR_PLAN.md  TTS项目对比分析报告.md  UI_MIGRATION_PLAN.md  mofa-tts-fewshot决策分析.md  mofa-tts-fewshot疑问解答.md  moxin-tts独立应用实施方案.md
models/setup-local-models/: check_macos_deps.sh  install_all_packages.sh  quick_setup_macos.sh  setup_isolated_env.sh  test_dependencies.py  verify_setup.sh
mofa-dora-bridge/src/: dispatcher.rs  error.rs  lib.rs  shared_state.rs
mofa-dora-bridge/src/widgets/: asr_listener.rs  audio_input.rs  audio_player.rs  mod.rs  prompt_input.rs
mofa-studio-shell/: Cargo.toml
mofa-studio-shell/src/: app.rs
mofa-widgets/src/: app_trait.rs  card.rs  lib.rs  theme.rs
moxin-tts-shell/: BUILDING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
moxin-tts-shell/src/: app.rs  main.rs
node-hub/dora-asr/: pyproject.toml
(+15 files in other folders)
