[package]
name = "moxin-tts"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
moyoyo-ui = ["mofa-tts/moyoyo-ui"]

[dependencies]
makepad-widgets.workspace = true
mofa-widgets = { path = "../mofa-widgets" }
mofa-ui = { path = "../mofa-ui" }
mofa-dora-bridge = { path = "../mofa-dora-bridge" }
mofa-tts = { path = "../apps/mofa-tts" }

# Audio
cpal.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
sysinfo.workspace = true
ctrlc = "3.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "moxin-tts"
path = "src/main.rs"
